[package]
name = "axer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.16.0"
argh = "0.1.12"
base64 = "0.22.1"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.201"
serde_json = "1.0.117"
sha2 = "0.10.8"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "macros", "time", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
